--- a/scss/canvas/_canvas-node-blur.scss
+++ b/scss/canvas/_canvas-node-blur.scss
@@ -14,8 +14,8 @@
     .canvas-node-content {
         background: none;
     }
+}
 
-    .tag[href="#node-blur"] {
-        display: none;
-    }
+.canvas-node:not(.is-editing) .tag[href="#node-blur"] {
+    display: none;
 }
