--- a/scss/canvas/_canvas-node-comic.scss
+++ b/scss/canvas/_canvas-node-comic.scss
@@ -8,8 +8,8 @@
     .markdown-preview-view {
         font-family: "VTC Letterer Pro", "Comic Sans", "Arial", sans-serif;
     }
+}
 
-    .tag[href="#node-comic"] {
-        display: none;
-    }
+.canvas-node:not(.is-editing) .tag[href="#node-comic"] {
+    display: none;
 }
