--- a/scss/canvas/_canvas-node-crime-scene-tape.scss
+++ b/scss/canvas/_canvas-node-crime-scene-tape.scss
@@ -19,8 +19,8 @@
     .canvas-node-content {
         background: none;
     }
+}
 
-    .tag[href="#node-crime-scene-tape"] {
-        display: none;
-    }
+.canvas-node:not(.is-editing) .tag[href="#node-crime-scene-tape"] {
+    display: none;
 }
