--- a/scss/canvas/_canvas.scss
+++ b/scss/canvas/_canvas.scss
@@ -4,6 +4,8 @@
 @use 'canvas-node-crime-scene-tape';
 @use 'canvas-node-image';
 @use 'canvas-node-large';
+@use 'canvas-node-only-text';
+@use 'canvas-node-text-color-invert';
 @use 'canvas-node-title-arcane';
 @use 'canvas-node-title-neon';
 @use 'canvas-node-title-poster';
