--- a/scss/editor/lists/_family-tree.scss
+++ b/scss/editor/lists/_family-tree.scss
@@ -56,6 +56,8 @@ ul:has(> li > .tag[href='#family-tree']) {
     li:has(> .tag[href='#wed']) {
         display: none;
         position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
         box-shadow: 0 2px 8px var(--background-modifier-box-shadow);
         background-color: rgba(0, 0, 0, 0.9);
         color: #ccc;
