remove img shadow in newspaper

--- a/scss/cssclasses/_newspaper.scss
+++ b/scss/cssclasses/_newspaper.scss
@@ -21,6 +21,7 @@
     --h1-weight: var(--font-semibold);
     --h1-variant: small-caps;
     --metadata-border-width: 0;
+    --image-shadow-offset: 0;
 }
 
 .newspaper .metadata-container {
