don't use variable in utility callouts

--- a/scss/editor/callouts/_callout-blank.scss
+++ b/scss/editor/callouts/_callout-blank.scss
@@ -1,12 +1,13 @@
 .callout[data-callout="blank"] {
-    --callout-padding: 0;
-    --callout-content-padding: 0;
-    --callout-border-width: 0;
-
     margin: 0;
+    padding: 0;
+    border: none;
+    background: none;
 
-    &, > .callout-content {
+    > .callout-content {
+        padding: 0;
         background: none;
+        border: none;
     }
 
     > .callout-title { display: none; }
