--- a/scss/editor/callouts/_callout-grid.scss
+++ b/scss/editor/callouts/_callout-grid.scss
@@ -1,9 +1,7 @@
 .callout[data-callout="grid"] {
-    --callout-color: var(--color-gray-rgb);
-    --callout-padding: 0;
-    --callout-content-padding: 0;
     background: none;
     border: none;
+    padding: 0;
 
     > .callout-title {
         display: none;
@@ -13,9 +11,10 @@
         border: none;
         display: grid;
         gap: 10px;
+        padding: 0;
     }
 
-    > .callout-content > * {
+    > .callout-content.callout-content > * {
         margin: 0;
     }
 
