--- a/scss/editor/_fas-headings.scss
+++ b/scss/editor/_fas-headings.scss
@@ -53,58 +53,61 @@
 
 
 
-.fas-h1-display .markdown-preview-view:not(:is(.newspaper, .movie-script, .minimalist, .h1-stroke, .h1-normal)) h1,
-.markdown-preview-view.h1-display h1 {
+.fas-h1-display .markdown-preview-view:not(:is(.newspaper, .movie-script, .minimalist, .h1-stroke, .h1-normal)),
+.markdown-preview-view.h1-display {
     --h1-line-height: 1.2em;
     --h1-size: 3em;
     --h1-font: var(--font-typewriter), var(--font-text);
     --h1-color: var(--workleaves-background);
     --h1-background: var(--color-base-100);
 
-    background-color: var(--h1-background);
-    text-align: center;
-    position: relative;
-    padding: var(--cutout-outline-inset);
-    clip-path: polygon(
-        0 var(--cutout-corner-angle),
-        var(--cutout-corner-angle) 0,
-        calc(100% - var(--cutout-corner-angle)) 0,
-        100% var(--cutout-corner-angle),
-        100% calc(100% - var(--cutout-corner-angle)),
-        calc(100% - var(--cutout-corner-angle)) 100%,
-        var(--cutout-corner-angle) 100%,
-        0 calc(100% - var(--cutout-corner-angle)));
-    
-    @include cutout_border.outline;
-
-    &:is(.is-collapsed > h1)::before {
-        background: var(--h1-border-color-collapsed);
-    }
-
-    &:is(.is-collapsed > h1)::after {
-        content: "";
-        position: absolute;
-        inset: 0;
-        background: var(--h1-border-color-collapsed);
+    h1 {
+        
+        background-color: var(--h1-background);
+        text-align: center;
+        position: relative;
+        padding: var(--cutout-outline-inset);
         clip-path: polygon(
-            0 0,
-            100% 0,
-            100% 100%,
-            0 100%,
-            0 0,
-            var(--cutout-outline-inset)  calc(var(--cutout-corner-angle) + 0.5 * var(--cutout-outline-inset) + 2px),
-            var(--cutout-outline-inset) calc(100% - var(--cutout-corner-angle) - 0.5 * var(--cutout-outline-inset) - 2px),
-            calc(var(--cutout-corner-angle) + 0.5 * var(--cutout-outline-inset) + 2px) calc(100% - var(--cutout-outline-inset)),
-            calc(100% - var(--cutout-corner-angle) - 0.5 * var(--cutout-outline-inset) - 2px) calc(100% - var(--cutout-outline-inset)),
-            calc(100% - var(--cutout-outline-inset)) calc(100% - var(--cutout-corner-angle) - 0.5 * var(--cutout-outline-inset) - 2px),
-            calc(100% - var(--cutout-outline-inset)) calc(var(--cutout-corner-angle) + 0.5 * var(--cutout-outline-inset) + 2px),
-            calc(100% - var(--cutout-corner-angle) - 0.5 * var(--cutout-outline-inset) - 2px) var(--cutout-outline-inset),
-            calc(var(--cutout-corner-angle) + 0.5 * var(--cutout-outline-inset) + 2px) var(--cutout-outline-inset),
-            var(--cutout-outline-inset) calc(var(--cutout-corner-angle) + 0.5 * var(--cutout-outline-inset) + 2px));
-    }
+            0 var(--cutout-corner-angle),
+            var(--cutout-corner-angle) 0,
+            calc(100% - var(--cutout-corner-angle)) 0,
+            100% var(--cutout-corner-angle),
+            100% calc(100% - var(--cutout-corner-angle)),
+            calc(100% - var(--cutout-corner-angle)) 100%,
+            var(--cutout-corner-angle) 100%,
+            0 calc(100% - var(--cutout-corner-angle)));
+        
+        @include cutout_border.outline;
 
-    .heading-collapse-indicator {
-        margin-inline-start: 0;
+        &:is(.is-collapsed > h1)::before {
+            background: var(--h1-border-color-collapsed);
+        }
+
+        &:is(.is-collapsed > h1)::after {
+            content: "";
+            position: absolute;
+            inset: 0;
+            background: var(--h1-border-color-collapsed);
+            clip-path: polygon(
+                0 0,
+                100% 0,
+                100% 100%,
+                0 100%,
+                0 0,
+                var(--cutout-outline-inset)  calc(var(--cutout-corner-angle) + 0.5 * var(--cutout-outline-inset) + 2px),
+                var(--cutout-outline-inset) calc(100% - var(--cutout-corner-angle) - 0.5 * var(--cutout-outline-inset) - 2px),
+                calc(var(--cutout-corner-angle) + 0.5 * var(--cutout-outline-inset) + 2px) calc(100% - var(--cutout-outline-inset)),
+                calc(100% - var(--cutout-corner-angle) - 0.5 * var(--cutout-outline-inset) - 2px) calc(100% - var(--cutout-outline-inset)),
+                calc(100% - var(--cutout-outline-inset)) calc(100% - var(--cutout-corner-angle) - 0.5 * var(--cutout-outline-inset) - 2px),
+                calc(100% - var(--cutout-outline-inset)) calc(var(--cutout-corner-angle) + 0.5 * var(--cutout-outline-inset) + 2px),
+                calc(100% - var(--cutout-corner-angle) - 0.5 * var(--cutout-outline-inset) - 2px) var(--cutout-outline-inset),
+                calc(var(--cutout-corner-angle) + 0.5 * var(--cutout-outline-inset) + 2px) var(--cutout-outline-inset),
+                var(--cutout-outline-inset) calc(var(--cutout-corner-angle) + 0.5 * var(--cutout-outline-inset) + 2px));
+        }
+
+        .heading-collapse-indicator {
+            margin-inline-start: 0;
+        }
     }
 }
 
