--- a/scss/editor/_editor.scss
+++ b/scss/editor/_editor.scss
@@ -16,5 +16,5 @@
 @use 'fas-headings';
 
 .markdown-source-view, .markdown-reading-view {
-    container: markdown-view / inline-size;
+    container: markdown-view / size;
 }
