Add sci-fi classes

--- a/scss/_cssvariables.scss
+++ b/scss/_cssvariables.scss
@@ -145,6 +145,9 @@ body {
     /* links */
     --link-decoration-thickness-hover: 1px;
 
+    /* sci fi */
+    --sci-fi-color-rgb: var(--color-cyan-rgb);
+
     /* sidedocks */
     --sidedock-tab-header-padding-bottom: 0px;
 
