--- a/scss/editor/_fas-headings.scss
+++ b/scss/editor/_fas-headings.scss
@@ -53,7 +53,7 @@
 
 
 
-.fas-h1-display .markdown-preview-view:not(:is(.newspaper, .movie-script, .minimalist, .h1-stroke, .h1-normal)),
+.fas-h1-display .markdown-preview-view:not(:is(.newspaper, .movie-script, .minimalist, .h1-stroke, .h1-normal, .sci-fi)),
 .markdown-preview-view.h1-display {
     --h1-line-height: 1.2em;
     --h1-size: 3em;
