--- a/scss/editor/_editor.scss
+++ b/scss/editor/_editor.scss
@@ -3,6 +3,7 @@
 @use 'callouts/callouts';
 @use 'code/code';
 @use 'embeds/embeds';
+@use 'footnotes';
 @use 'headings';
 @use 'highlight';
 @use 'horizontal_rule';
