--- a/scss/cssclasses/_newspaper.scss
+++ b/scss/cssclasses/_newspaper.scss
@@ -1,12 +1,8 @@
-.fas-bg-textures.theme-dark .view-content:has(.newspaper) {
-    background-image: var(--black-paper);
+.newspaper {
+    background-color: var(--workleaves-background);
+    background-image: var(--sidebar-paper);
     background-size: 500px;
-    background-blend-mode: luminosity;
-}
-.fas-bg-textures.theme-light .view-content:has(.newspaper) {
-    background-image: var(--white-paper);
-    background-size: 500px;
-    background-blend-mode: luminosity;
+    background-blend-mode: multiply;
 }
 
 .newspaper {
@@ -71,7 +67,7 @@
     }
 }
 
-.newspaper div:has(> .frontmatter) + div ~ div > h1,
+.newspaper div:has(> .frontmatter) + div ~ div > h1, /* TODO: replace with .mod-frontmatter on 1.7.3 release */
 .newspaper .cm-content > .cm-line ~ .HyperMD-header-1 {
     border-top: 1px solid var(--text-normal);
 }
