Move variables to specific files

--- a/scss/canvas/_canvas-node-title-neon.scss
+++ b/scss/canvas/_canvas-node-title-neon.scss
@@ -10,7 +10,7 @@
         background: none;
     }
     .markdown-preview-view {
-        font-family: "Neon Sans";
+        font-family: "Neon Sans", Arial, Helvetica, sans-serif;
         text-align: center;
         color: rgb(var(--canvas-color));
         text-shadow:
