--- a/scss/canvas/_canvas-node-title-vintage.scss
+++ b/scss/canvas/_canvas-node-title-vintage.scss
@@ -13,7 +13,7 @@
         background: none;
     }
     .markdown-preview-view {
-        font-family: "Noir-et-Blanc";
+        font-family: "Noir-et-Blanc", Palatino, Baskerville, 'Times New Roman', Times, serif;
         text-align: center;
         color: rgb(var(--canvas-color));
     }
