--- a/scss/editor/_headings.scss
+++ b/scss/editor/_headings.scss
@@ -1,3 +1,9 @@
+body {
+    /* custom */
+    --h1-border-color: currentColor;
+    --h1-border-color-collapsed: var(--collapse-icon-color-collapsed);
+}
+
 h2, h3, h4, h5, h6 {
     text-wrap: balance;
 }
