--- a/scss/canvas/_canvas-node-title-arcane.scss
+++ b/scss/canvas/_canvas-node-title-arcane.scss
@@ -1,5 +1,9 @@
 @use '../mixins/cutout_border';
 
+body {
+    --noise: url("data:image/svg+xml,%3Csvg viewBox='0 0 600 600' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch' /%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+}
+
 .canvas-node:has(.tag[href="#node-title-arcane"]):not(.is-editing) {
     --cutout-corner-angle: 1.5em;
     --cutout-outline-inset: 0;
@@ -17,7 +21,7 @@
     }
     .markdown-preview-view {
         --relief-color: hsl(from rgb(var(--canvas-color)) h calc(s * 0.5) calc(l * 0.5));
-        font-family: "Arcane Nine";
+        font-family: "Arcane Nine", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-weight: var(--font-extrabold);
         text-align: center;
         line-height: 1;
