--- a/scss/editor/callouts/_callout-screen.scss
+++ b/scss/editor/callouts/_callout-screen.scss
@@ -12,7 +12,7 @@
     --image-shadow-offset: 0;
 
     color: rgb(var(--callout-color));
-    font-family: var(--font-monospace-screen);
+    font-family: 'ProFont', 'Chakra Petch', 'Courier New', Courier, monospace;
 
     &, .callout-title {
         background: none;
