--- a/scss/editor/callouts/_callout-style.scss
+++ b/scss/editor/callouts/_callout-style.scss
@@ -1,3 +1,13 @@
+body {
+    --callout-quote: var(--color-gray-rgb);
+    --callout-radius: 0;
+    --callout-border-width: 1px;
+    --callout-border-opacity: 0.25;
+    --callout-padding: 0;
+    --callout-content-padding: var(--size-4-3) var(--size-4-3) var(--size-4-3) var(--size-4-6);
+    --callout-title-padding: var(--size-4-3);
+}
+
 .callout {
     position: relative;
 }
