--- a/scss/window/_ribbon.scss
+++ b/scss/window/_ribbon.scss
@@ -1,3 +1,8 @@
+body {
+    --ribbon-background: none;
+    --ribbon-background-collapsed: none;
+}
+
 .workspace-ribbon {
     --icon-color: var(--workspace-foreground-muted);
     --icon-color-hover: var(--workspace-foreground);
