--- a/scss/window/_workspace.scss
+++ b/scss/window/_workspace.scss
@@ -1,3 +1,14 @@
+body {
+    /* custom */
+    --workspace-foreground: var(--text-normal);
+    --workspace-foreground-muted: var(--text-muted);
+    --workspace-foreground-faint: var(--text-faint);
+    --workspace-background: var(--background-secondary);
+
+    --workleaves-background: var(--background-primary);
+    --workleaves-foreground: var(--text-normal);
+}
+
 /* ----------- App background color ----------- */
 body,
 .workspace {
