--- a/scss/editor/_fas-headings.scss
+++ b/scss/editor/_fas-headings.scss
@@ -1,3 +1,7 @@
+@forward '../shared/font-typewriter';
+@forward '../shared/cutout-straight';
+@forward '../shared/cutouts';
+@forward '../shared/workleaves';
 @use '../mixins/cutout_border';
 
 
