--- a/scss/editor/callouts/_callout-email.scss
+++ b/scss/editor/callouts/_callout-email.scss
@@ -1,3 +1,5 @@
+@forward '../../shared/workleaves';
+
 .callout[data-callout="email"] {
     --callout-icon: lucide-send-horizontal;
     --callout-blend-mode: normal;
