--- a/scss/editor/lists/_tree-view.scss
+++ b/scss/editor/lists/_tree-view.scss
@@ -1,4 +1,5 @@
 @use '../../animations/animations';
+@forward '../../shared/workleaves';
 
 ul:has(> li > .tag[href='#tree-view']) {
     --indentation-guide-reading-indent: -0.8em;
