--- a/scss/plugins/community/dataview/_dataview-cards-deck.scss
+++ b/scss/plugins/community/dataview/_dataview-cards-deck.scss
@@ -1,5 +1,5 @@
+@forward '../../../shared/workleaves';
 @use '../../../mixins/cards-deck';
-
 
 @scope (.dataview-cards-deck) to (.markdown-embed .markdown-embed) {
     
