--- a/scss/window/_status-bar.scss
+++ b/scss/window/_status-bar.scss
@@ -1,3 +1,6 @@
+@forward '../shared/shadow-color';
+@forward '../shared/workspace';
+
 @scope (body:not(.is-popout-window)) {
     
     :scope.fas-status-bar-top {
