--- a/scss/window/_fas-bg-textures.scss
+++ b/scss/window/_fas-bg-textures.scss
@@ -1,3 +1,5 @@
+@forward '../shared/paper-texture';
+
 /* ----------- Coffee stain ----------- */
 
 .fas-bg-textures .workspace-leaf-content[data-type="file-explorer"]::before {
@@ -22,7 +24,7 @@
 
 /* ----------- Paper texture ----------- */
 .fas-bg-textures .mod-sidedock .workspace-leaf {
-    background-image: var(--sidebar-paper);
+    background-image: var(--paper-texture);
     background-size: 500px;
     background-blend-mode: multiply;
 }
